<resources>
    <string name="app_name">Assessment</string>
    <string name="proximo">Próximo</string>
    <string name="bem_vindo">Seja Bem-Vindo!</string>
    <string name="duracao_text">Icone de Duração que represente duração do filme</string>
    <string name="localizacao_text">Icone de Localização</string>
    <string name="imagem_filme">Imagem do Filme</string>
    <string name="filmesDesc">Filmes</string>
    <string name="ver_mais">Ver Mais</string>
    <string name="img_header_desc">Imagem com varias capas de filme servindo como banner</string>
    <string name="buscar_filme">Buscar Filme</string>
    <string name="foto_de_perfil_desc">Foto de perfil do usuário</string>
    <string name="onBoard_1">Todas as Informações sobre seus filmes favoritos em um só lugar!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_principal_desc">INFORMAÇÕES SOBRE FILMES E SÉRIES EM UM SÓ LUGAR</string>
    <string name="banner_do_filme_selecionado">Banner do filme selecionado</string>
    <string name="detalhes">Detalhes</string>
    <string name="sinopse">Sinopse</string>
    <string name="rating">Avaliação:</string>
    <string name="elenco">Elenco:</string>
    <string name="classificacao">Classificação:</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="about">About</string>
    <string name="lancamento">Lançamento:</string>
    <string name="email_PO">aecds26@gmail.com</string>
    <string name="imagem_dev1">Raphael Costa</string>
    <string name="imagem_dev2">André Eduardo</string>
    <string name="imagem_dev3">Bruno Rudy</string>
    <string name="imagem_dev4">Vinícius Braz</string>
    <string name="nome_aluno1">Raphael Costa</string>
    <string name="nome_aluno2">André Eduardo</string>
    <string name="nome_aluno3">Bruno Rudy</string>
    <string name="nome_aluno4">Vinícius Braz</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="_3">3</string>
    <string name="tps_entregues">TPs Entregues</string>
    <string name="tps_4">4</string>
    <string name="ats">ATs</string>
    <string name="ats_2">2</string>
    <string name="autoria">App criado para apresentação do Projeto de Bloco - Instituto Infnet</string>
    <string name="quem_he_vc">Seja bem vindo ao Sinops \nAgora queremos saber um pouco sobre você</string>
    <string name="imagem_de_logotipo">Imagem de logotipo do app</string>
    <string name="hint_input_nome">Nome</string>
    <string name="img_familia">Imagem que retrata um familia no cinema</string>
    <string name="telefone_ficticio">+55 (99) 99999-9999</string>
    <string name="configuracao">Configurações</string>
    <string name="noturno">Ativar Modo Noturno</string>
    <string name="seta_voltar">Seta para voltar a pagina anterior</string>
    <string name="icone_de_favorito">Icone de favorito</string>
    <string name="nome_desc">Nome</string>
    <string name="nome_usuario">Nome Usuario</string>
</resources>