<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.assessment.viewmodel.UserViewModel" />
        <variable
            name="fragmentForm"
            type="com.example.assessment.FragmentForm" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentForm">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_sinops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagem_de_logotipo" />

    <TextView
        android:id="@+id/text_idt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quem_he_vc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lt_input_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input_nome"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_idt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.nome}"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>